# MMRecompAPCppGlue

./: CMakeLists.txt  PythonStandalone_Win_x64.cmake  apcpp-config.h  apcpp-glue.cpp  apcpp-glue.h  apcpp-singleplayer-config-exports.cpp  apcpp-singleplayer-config.cpp  apcpp-singleplayer-config.h  apcpp-solo-gen.cpp  apcpp-solo-gen.h  apcpp-yaml-config-exports.cpp  apcpp-yaml-config.cpp  apcpp-yaml-config.h
minipelago/: package.py
minipelago/scripts/: MMGenerate.py
